--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^5.22.0",
     "@react-pdf/renderer": "^4.3.1",
+    "@supabase/supabase-js": "^2.95.1",
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
     "next": "16.0.7",
